--- a/scss/general/_common.scss
+++ b/scss/general/_common.scss
@@ -21,7 +21,7 @@ img {
     height: auto;
 }
 .container {
-    max-width: $contaienr-width;
+    max-width: $container-width;
     margin: 0 auto;
     padding-left: 15px;
     padding-right: 15px;
