--- a/scss/general/_general.scss
+++ b/scss/general/_general.scss
@@ -1,5 +1,5 @@
 @import "variables";
 @import "normalize";
-@import "visuaaly-hidden";
+@import "visually-hidden";
 @import "container";
 @import "common";
